--- a/resource/locales/en_US/translation.json
+++ b/resource/locales/en_US/translation.json
@@ -145,6 +145,7 @@
   "Recent Changes": "Recent Changes",
   "original_path":"Original path",
   "new_path":"New path",
+  "duplicated_path":"Duplicated path",
   "personal_dropdown": {
     "home": "Home",
     "settings": "Settings",
