--- a/resource/locales/zh_CN/translation.json
+++ b/resource/locales/zh_CN/translation.json
@@ -153,6 +153,7 @@
   "Recent Changes": "最新修改",
   "original_path":"Original path",
   "new_path":"New path",
+  "duplicated_path":"Duplicated path",
 	"form_validation": {
 		"error_message": "有些值不正确",
 		"required": "%s 是必需的",
